fix protobuf message construction (#40)
