# services/scenario-manager/docs/swagger.json
@@ -397,7 +397,7 @@
                 }
             }
         },
-        "/api/scenarios/action": {
+        "/api/scenarios/actions": {
             "post": {
                 "description": "Take an action on a scenario",
                 "consumes": [
@@ -1311,11 +1311,7 @@
                 "action": {
                     "type": "string"
                 },
-                "service_id": {
-                    "type": "string"
-                },
                 "service_name": {
-                    "description": "The service id and name with the action\nin: path\nenum: DEPLOY, DELETE, UPDATE, CHECK",
                     "type": "string"
                 }
             }
